# fts

./: fts.cabal
app/: Main.hs
end-to-end-test/: adt.fts  block.fts  block.txt  field-get.fts  hello-world.fts
src/FTS/: AST.hs  Convert.hs  Lex.hs  Parse.hs
src/TS/: AST.hs  Pretty.hs
tools/: test
