name:                       fts
version:                    0.0.1
build-type:                 Simple
cabal-version:              >=1.10

library
    build-depends:          base, parsec, text
    default-language:       Haskell2010
    exposed-modules:        FTS.AST, FTS.Convert, FTS.Lex, FTS.Parse, TS.AST, TS.Pretty
    ghc-options:            -Wall
    hs-source-dirs:         src

executable ftsc
    build-depends:          base, bytestring, fts, parsec, text
    default-language:       Haskell2010
    ghc-options:            -Wall -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:         app
    main-is:                Main.hs

test-suite fts-unit-test
    build-depends:          base, fts
    default-language:       Haskell2010
    ghc-options:            -threaded -rtsopts -with-rtsopts=-N
    ghc-options:            -Wall
    hs-source-dirs:         unit-test
    main-is:                Spec.hs
    type:                   exitcode-stdio-1.0
